--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+app-main-navigation, app-dashboard-template {
+  width: 100%;
+}
+agm-map {
+    height: 300px;
+}
+
+.numeroPar {
+    background-color: aliceblue;
+    color: blue
+}
+
+.numeroImpar {
+    background-color: grey;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
