--- a/src/app/main-navigation/main-navigation.component.html
+++ b/src/app/main-navigation/main-navigation.component.html
@@ -8,6 +8,7 @@
       <a mat-list-item routerLink="/drag" routerLinkActive="active">drag</a>
       <a mat-list-item routerLink="/table" routerLinkActive="active">table</a>
       <a mat-list-item routerLink="/tuto1" routerLinkActive="active">tuto1</a>
+      <a mat-list-item routerLink="/crear" routerLinkActive="active">crear</a>
     </mat-nav-list>
    <button mat-button (click)="drawer.toggle();">sidenav.toggle()</button>
 
